--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bs-react-notification-system",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Reason bindings for react-notification-system",
   "main": "lib/js/src/ReactNotificationSystem.js",
   "keywords": [
@@ -29,7 +29,9 @@
     "release-it": "release-it"
   },
   "author": "Remi Bernal <bernal.rs@gmail.com>",
-  "contributors": ["Remi Bernal <bernal.rs@gmail.com>"],
+  "contributors": [
+    "Remi Bernal <bernal.rs@gmail.com>"
+  ],
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
@@ -48,7 +50,13 @@
     "reason-react": "^0.2.4"
   },
   "lint-staged": {
-    "*.{js,json}": ["prettier --write", "git add"],
-    "src/**/*.re": ["refmt --in-place", "git add"]
+    "*.{js,json}": [
+      "prettier --write",
+      "git add"
+    ],
+    "src/**/*.re": [
+      "refmt --in-place",
+      "git add"
+    ]
   }
 }
