--- a/package.json
+++ b/package.json
@@ -33,19 +33,17 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "bs-platform": "2.0.0",
+    "bs-platform": "2.1.0",
     "husky": "0.14.3",
-    "lint-staged": "4.3.0",
-    "prettier": "1.8.2",
+    "lint-staged": "6.0.0",
+    "prettier": "1.9.2",
     "react-notification-system": "0.2.16",
-    "reason-react": "0.2.4",
+    "reason-react": "0.3.0",
     "release-it": "^5.1.2"
   },
   "peerDependencies": {
     "react-notification-system": "0.2.16",
-    "react": "^15.3.0 || ^16.0.0",
-    "react-dom": "^15.3.0 || ^16.0.0",
-    "reason-react": "^0.2.4"
+    "reason-react": "0.3.0"
   },
   "lint-staged": {
     "*.{js,json}": ["prettier --write", "git add"],
